# VIL_Fusion

./: CMakeLists.txt  README.md  package.xml
config/daheng/: daheng_config.yaml  velodyne_param_32.yaml
config/iphone/: iphone_config.yaml
config/kitti/: kitti_config.yaml  velodyne_param_64.yaml
launch/: module_rviz.launch  module_visual_mask.launch  run_fusion.launch
launch/config/: vins_rviz_config.rviz
src/global_fusion/: poseGraphOptimization.cpp
src/global_fusion/include/: common.h
src/global_fusion/include/Scancontext/: Scancontext.h
src/visual_inertial_lidar/feature_tracker/: feature_tracker.cpp  feature_tracker_node.cpp  feature_tracker_node_mask.cpp  parameters.cpp  parameters.h
src/visual_inertial_lidar/feature_tracker/include/: EstimationMapping.hpp  common.h  featureExtract.hpp  featureExtraction.hpp  lidarFactor.hpp
src/visual_inertial_lidar/pose_graph/: pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
src/visual_inertial_lidar/vins_estimator/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
src/visual_inertial_lidar/vins_estimator/factor/: lidarConstraint_base.h  lidar_factor.h
src/visual_inertial_lidar/vins_estimator/utility/: visualization.cpp  visualization.h
